[package]
name = "match-control-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-web-lab = "0.19.1" #sse
anyhow = { version = "1.0.66" }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.25" 
http = { version = "0.2.8" }
serde = { version = "1.0.148", features = ["derive"] }
serde-aux = { version =  "4.1.2" }
serde_json = { version =  "1.0.89" }
strum = { version = "0.25.0", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline", "bigdecimal"] }
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
utoipa = "3.4.3"
utoipa-swagger-ui = { version = "3.0.2", features = ["actix-web"] }